syntax = "proto3";

package transport;


service RestaurantService {
  rpc GetMenu (MenuRequest) returns (MenuResponse);
}

message MenuRequest {
  string category = 1;
}

message MenuResponse {
  repeated MenuItem items = 1;
}

message MenuItem {
  optional string name = 1;
  double price = 2;
}

message InternalErrorResponse {
  string error_message = 1;
}
